Updates: - Added the "time" parameter to several commands that have a time-based waiting element