@@ -26,7 +26,10 @@ public final class RespawnCommand implements TabExecutor {
             commandSender.sendMessage("§cThe respawn command can only be used by a player.");
             return true;
         }
-        if (args.length > 0) {
+        if (args.length > 1) {
+            return false;
+        }
+        if (args.length == 1 && !args[0].equalsIgnoreCase("time")) {
             return false;
         }
         
@@ -40,6 +43,11 @@ public final class RespawnCommand implements TabExecutor {
             builder.append("§r §b(").append(this.plugin.formatRealTimeWait(waitTime)).append(" in real-time)");
             builder.append("§r §cto use your respawn ability.");
             sender.sendMessage(builder.toString());
+            return true;
+        }
+        
+        if (args.length == 1) {
+            sender.sendMessage(CVRanksPlugin.ABILITY_READY_RESPAWN);
             return true;
         }
         
@@ -76,6 +84,6 @@ public final class RespawnCommand implements TabExecutor {
     @Override
     @NotNull
     public List<String> onTabComplete(@NotNull final CommandSender commandSender, @NotNull final Command command, @NotNull final String label, @NotNull final String[] args) {
-        return Collections.emptyList();
+        return commandSender instanceof Player ? List.of("time") : Collections.emptyList();
     }
 }
